profile page tabs position align fixed - issue

--- a/docroot/sites/all/themes/ambitious/css/layouts/global.css
+++ b/docroot/sites/all/themes/ambitious/css/layouts/global.css
@@ -832,52 +832,3 @@ table tr:nth-child(odd) td a, table tr.odd td a {
 #quicktabs-user_profile_page ul.quicktabs-tabs li.active a {
   color: #f15500;
 }
-
-/* Nav */
-/* line 404, ../../sass/layouts/global.scss */
-#quicktabs-user_profile_page {
-  text-align: center;
-}
-/* line 406, ../../sass/layouts/global.scss */
-#quicktabs-user_profile_page ul.quicktabs-tabs {
-  position: relative;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: flex;
-  margin: 0 auto;
-  padding: 0;
-  max-width: 1200px;
-  list-style: none;
-  -ms-box-orient: horizontal;
-  -ms-box-pack: center;
-  -webkit-flex-flow: row wrap;
-  -moz-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-}
-/* line 427, ../../sass/layouts/global.scss */
-#quicktabs-user_profile_page ul.quicktabs-tabs li {
-  position: relative;
-  z-index: 1;
-  display: block;
-  margin: 0;
-  text-align: center;
-  -webkit-flex: 1;
-  -moz-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-/* line 438, ../../sass/layouts/global.scss */
-#quicktabs-user_profile_page ul.quicktabs-tabs li.active a {
-  color: #f15500;
-}
-/* line 441, ../../sass/layouts/global.scss */
-#quicktabs-user_profile_page ul.quicktabs-tabs a:focus {
-  outline: none;
-}
